# bedrock-model-compare

./: .gitignore  README.md  docker-compose.yml  start.sh  stop.sh
api/: .env.example  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/config/: routing_config.yaml
api/models/: __init__.py  constants.py  requests.py  responses.py
api/routers/: __init__.py  analytics.py  auto_route.py  benchmark.py  conductor.py  debate.py  execute.py  explainability.py  image.py  models.py  settings.py  video.py  workspace.py
api/services/: __init__.py  analytics.py  auto_router.py  bedrock_executor.py  benchmark.py  explainability.py  image_generator.py  pricing.py  video_generator.py
api/test/: test_brainstorming.py
docker/code-server/: Dockerfile  entrypoint.sh
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: index.ts
frontend/components/common/: ErrorToast.tsx
frontend/components/forms/: ModelSelector.tsx
frontend/components/layout/: SettingsPanel.tsx  Sidebar.tsx
frontend/components/modals/: ComparisonModal.tsx  DetailModal.tsx  SettingsModal.tsx
frontend/components/results/: ImageResultCard.tsx  ResultCard.tsx  ResultsView.tsx  VideoResultCard.tsx
frontend/components/views/: AnalyticsDashboard.tsx  AutoRouteView.tsx  BenchmarkView.tsx  CodeEditorView.tsx  ConductorView.tsx  DebateView.tsx  ExplainabilityView.tsx  ImageGenerationView.tsx  VideoGenerationView.tsx
frontend/static/: index.html
frontend/types/: analytics.ts  index.ts
